# rero_ros

./: CMakeLists.txt  LICENSE  README.md  package.xml
cmake/: common.cmake
install/: local_setup.sh  setup.sh
install/rero_ros/include/rero_ros/rero_ros/msg/: intent.h  intent.hpp  rosidl_generator_c__visibility_control.h  rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h  slot.h  slot.hpp
install/rero_ros/include/rero_ros/rero_ros/msg/detail/: intent__builder.hpp  intent__functions.h  intent__rosidl_typesupport_fastrtps_c.h  intent__rosidl_typesupport_fastrtps_cpp.hpp  intent__rosidl_typesupport_introspection_c.h  intent__rosidl_typesupport_introspection_cpp.hpp  intent__struct.h  intent__struct.hpp  intent__traits.hpp  intent__type_support.h  intent__type_support.hpp  slot__builder.hpp  slot__functions.h  slot__rosidl_typesupport_fastrtps_c.h  slot__rosidl_typesupport_fastrtps_cpp.hpp  slot__rosidl_typesupport_introspection_c.h  slot__rosidl_typesupport_introspection_cpp.hpp  slot__struct.h  slot__struct.hpp  slot__traits.hpp  slot__type_support.h  slot__type_support.hpp
install/rero_ros/lib/rero_ros/: nlu  speech_recognition  text_to_speech
install/rero_ros/share/ament_index/resource_index/package_run_dependencies/: rero_ros
install/rero_ros/share/ament_index/resource_index/parent_prefix_path/: rero_ros
install/rero_ros/share/ament_index/resource_index/rosidl_interfaces/: rero_ros
install/rero_ros/share/rero_ros/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/rero_ros/share/rero_ros/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_rero_ros__rosidl_generator_cppExport.cmake  export_rero_ros__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  rero_rosConfig-version.cmake  rero_rosConfig.cmake  rero_ros__rosidl_typesupport_cExport-noconfig.cmake  rero_ros__rosidl_typesupport_cExport.cmake  rero_ros__rosidl_typesupport_introspection_cExport-noconfig.cmake  rero_ros__rosidl_typesupport_introspection_cppExport-noconfig.cmake  rero_ros__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/rero_ros/share/rero_ros/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/rero_ros/share/rero_ros/launch/: nlu.launch.xml  speech_recognition.launch.xml  text_to_speech.launch.xml
install/rero_ros/share/rero_ros/msg/: Intent.idl  Intent.json  Intent.msg  Slot.idl  Slot.json  Slot.msg
launch/: audio_stream.launch.xml  audio_subscriber.launch.xml  doa_node.launch.xml  nlu.launch  nlu.launch.xml  speech_recognition.launch  speech_recognition.launch.xml  text_to_speech.launch  text_to_speech.launch.xml  vad_node.launch.xml
lib/client/: audio.grpc.pb.cc  audio.grpc.pb.h  audio.pb.cc  audio.pb.h  cmake_install.cmake  hotword.grpc.pb.cc  hotword.grpc.pb.h  hotword.pb.cc  hotword.pb.h  nlu.grpc.pb.cc  nlu.grpc.pb.h  nlu.pb.cc  nlu.pb.h  options-pinned.h  speech_recognition.grpc.pb.cc  speech_recognition.grpc.pb.h  speech_recognition.pb.cc  speech_recognition.pb.h  text_to_speech.grpc.pb.cc  text_to_speech.grpc.pb.h  text_to_speech.pb.cc  text_to_speech.pb.h
lib/client/include/: AudioClient.h  NLUClient.h  SpeechRecognitionClient.h  TTSClient.h  json.h
lib/client/src/: AudioClient.cpp  NLUClient.cpp  SpeechRecognitionClient.cpp  TTSClient.cpp
log/: latest_build
msg/: Intent.msg  Slot.msg
src/: audio_stream.cpp  audio_subscriber.cpp  doa_node.cpp  nlu.cpp  speech_recognition.cpp  text_to_speech.cpp  vad_node.cpp
