<?xml version="1.0"?>
<package format="3">
  <name>rero_ros</name>
  <version>0.0.0</version>
  <description>The rero_ros package</description>

  <maintainer email="lukas@todo.todo">lukas</maintainer>
  <license>Apache-2.0</license>

  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core dependencies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <!-- Message generation for ROS 2 -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <!-- Test dependencies (optional but recommended) -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    
  </export>
</package>
